syntax = "proto3";

package auth;

service AuthService {
  rpc SignIn (LoginInput) returns (AccessToken) {}
  rpc SignUp (SignupInput) returns (User) {}
  rpc GetAllProfiles (GetAllProfilesParams) returns (ProfileResponse) {}
}

message GetAllProfilesParams {
  
}

message LoginInput {
  string userName = 1;
  string password = 2;
}

message SignupInput {
  string userName = 1;
  string password = 2;
}

message AccessToken {
  string access_token = 1;
}

message User {
  string id = 1;
  string userName = 2;
  string password = 3;
}

message ProfileResponse {
  repeated User data = 1;
}